Can't build w/o accelerated compositing https://bugs.webkit.org/show_bug.cgi?id=111891

Patch originally came from Tobias Mueller <tobiasmue@gnome.org>

Unreviewed build fix for platforms without ACCELERATED_COMPOSITING enabled, which
broke in r145057.

* dom/PseudoElement.cpp:
(WebCore::PseudoElement::~PseudoElement): Wrap the call to pseudoElementDestroyed in
    USE(ACCELERATED_COMPOSITING)

Canonical link: https://commits.webkit.org/130278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145312 268f45cc-cd09-0410-ab3c-d52691b4dbfc